updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer in training</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Albany New York but now I live in New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to run, bike, and take care of my black lab puppy named Stella</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My current dream job is to be a technical product manager at a tech company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Cranford New Jersey</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I worked at a healthcare startup company called Flatiron Health as a clinical trial study manager and was always jealous of the work that my software engineering teammates were able to do. I decided that I wanted to be one of them!</p>
     </section>
 
     <footer id="footer">
